--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask~=2.2.3
-SQLAlchemy~=2.0.3
-Werkzeug~=2.2.2
-requests~=2.28.2
+Flask==2.2.3
+SQLAlchemy==2.0.3
+Werkzeug==2.2.2
+requests==2.28.2
 psycopg2-binary==2.9.1
 mailjet-rest==1.3.4
 gunicorn==20.1.0
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.3
